[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/components/PlayersPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/components/Keyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/components/EntryDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/components/Spindle.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/GamePanel.gd" type="Script" id=5]
[ext_resource path="res://GameTheme.theme" type="Theme" id=6]

[node name="GamePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GP" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="VB" type="VBoxContainer" parent="GP"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="Top" type="PanelContainer" parent="GP/VB"]
margin_right = 1266.0
margin_bottom = 35.0

[node name="HB" type="HBoxContainer" parent="GP/VB/Top"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1259.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="GP/VB/Top/HB"]
margin_right = 1252.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Game Status Bar"

[node name="NewG" type="Button" parent="GP/VB/Top/HB"]
visible = false
margin_left = 956.0
margin_right = 996.0
margin_bottom = 20.0
text = "New"

[node name="Quit" type="Button" parent="GP/VB/Top/HB"]
visible = false
margin_left = 956.0
margin_right = 996.0
margin_bottom = 20.0
text = "Quit"

[node name="Game" type="PanelContainer" parent="GP/VB"]
margin_top = 39.0
margin_right = 1266.0
margin_bottom = 706.0
size_flags_vertical = 3

[node name="HSplit" type="HBoxContainer" parent="GP/VB/Game"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1259.0
margin_bottom = 660.0
custom_constants/separation = 12

[node name="EDKB" type="VBoxContainer" parent="GP/VB/Game/HSplit"]
margin_right = 882.0
margin_bottom = 653.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.47
custom_constants/separation = 12

[node name="EntryDisplay" parent="GP/VB/Game/HSplit/EDKB" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 882.0
margin_bottom = 423.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.93

[node name="Keyboard" parent="GP/VB/Game/HSplit/EDKB" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 435.0
margin_right = 882.0
margin_bottom = 653.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.99

[node name="SP" type="VBoxContainer" parent="GP/VB/Game/HSplit"]
margin_left = 894.0
margin_right = 1252.0
margin_bottom = 653.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="Spindle" parent="GP/VB/Game/HSplit/SP" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 358.0
margin_bottom = 121.0
size_flags_vertical = 3

[node name="PlayersPanel" parent="GP/VB/Game/HSplit/SP" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 133.0
margin_right = 358.0
margin_bottom = 653.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.28
[connection signal="pressed" from="GP/VB/Top/HB/NewG" to="." method="_on_NewG_pressed"]
[connection signal="pressed" from="GP/VB/Top/HB/Quit" to="." method="_on_Quit_pressed"]
[connection signal="game_log" from="GP/VB/Game/HSplit/EDKB/EntryDisplay" to="." method="_log"]
[connection signal="guess_checked" from="GP/VB/Game/HSplit/EDKB/EntryDisplay" to="GP/VB/Game/HSplit/SP/PlayersPanel" method="_on_EntryDisplay_guess_checked"]
[connection signal="letters_revealed" from="GP/VB/Game/HSplit/EDKB/EntryDisplay" to="GP/VB/Game/HSplit/SP/Spindle" method="_letters_guessed"]
[connection signal="one_letter" from="GP/VB/Game/HSplit/EDKB/EntryDisplay" to="GP/VB/Game/HSplit/EDKB/Keyboard" method="_on_EntryDisplay_one_letter"]
[connection signal="game_log" from="GP/VB/Game/HSplit/EDKB/Keyboard" to="." method="_log"]
[connection signal="key_pressed" from="GP/VB/Game/HSplit/EDKB/Keyboard" to="GP/VB/Game/HSplit/EDKB/EntryDisplay" method="_on_letter_guessed"]
[connection signal="game_log" from="GP/VB/Game/HSplit/SP/Spindle" to="." method="_log"]
[connection signal="score" from="GP/VB/Game/HSplit/SP/Spindle" to="GP/VB/Game/HSplit/SP/PlayersPanel" method="_score_gained"]
[connection signal="spun" from="GP/VB/Game/HSplit/SP/Spindle" to="GP/VB/Game/HSplit/EDKB/EntryDisplay" method="_on_Spindle_spun"]
[connection signal="game_log" from="GP/VB/Game/HSplit/SP/PlayersPanel" to="." method="_log"]
[connection signal="init_solve" from="GP/VB/Game/HSplit/SP/PlayersPanel" to="GP/VB/Game/HSplit/EDKB/EntryDisplay" method="init_solve"]
[connection signal="pre_reset" from="GP/VB/Game/HSplit/SP/PlayersPanel" to="." method="_pre_reset"]
[connection signal="turn_done" from="GP/VB/Game/HSplit/SP/PlayersPanel" to="GP/VB/Game/HSplit/SP/Spindle" method="_on_PlayersPanel_turn_done"]
